# ailibrary-python

./: .dockerignore  .gitignore  README.md  docs.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
old_tests/: _setup_tests.py  test_agent.py  test_completion.py  test_file2.txt  test_files.py  test_forms.py  test_integrations.py  test_knowledge_base.py  test_notes.py  test_utilities.py
src/ailibrary/: client.py
src/ailibrary/_internal/: __http_client.py  _agent.py  _files.py  _forms.py  _knowledge_base.py  _notes.py  _utilities.py  agent.py  files.py  knowledge_base.py  notes.py  utilities.py
src/ailibrary/resources/: agent.py  files.py  knowledge_base.py  notes.py  utilities.py
src/ailibrary/types/: shared.py
src/ailibrary/types/agent/: chat_message_model.py  requests.py  responses.py
src/ailibrary/types/files/: binary_file_validator.py  requests.py  (+2 more)
src/ailibrary/utils/: http.py  http_client.py  lib_request.py
testing/: _setup_tests.py  test.py  test_agent.py  test_files.py  test_knowledge_base.py  test_notes.py  test_utilities.py  testing_script.py
tests/: README.md  conftest.py  pytest.ini  test_config.py
tests/_sample_files/: test.txt
tests/e2e/: conftest.py  pytest.ini
tests/e2e/flows/: test_agent_kb_form_flow.py
tests/http_client/: test_request.py
tests/integration/: test_agent_flows.py  test_agent_forms.py  test_agent_kb.py  test_files_kb.py  test_http_client.py
tests/unit/: test_agent.py
tests/unit/agent/: conftest.py  test_chat.py  test_create.py  test_delete.py  test_get.py  test_list_agents.py  test_update.py
tests/unit/files/: conftest.py  test_delete.py  test_get.py  test_list_files.py  test_upload.py
tests/unit/forms/: conftest.py  test_create.py  test_delete.py  test_get.py  test_list_forms.py  test_update.py
tests/unit/http_client/: test_init.py
tests/unit/knowledge_base/: conftest.py  test_create.py  test_delete.py  test_get.py  test_get_status.py  test_list_knowledge_bases.py
tests/unit/notes/: conftest.py  test_add.py  test_delete_notes.py  test_get.py  test_get_resource_notes.py  test_update.py
tests/unit/utilities/: conftest.py  test_document_parser.py  test_document_thumbnail.py  test_json_schema_generator.py  test_news_search.py  test_web_parser.py  test_web_search.py
(+17 files in other folders)
