[build-system]
requires = ["setuptools>=61.0", "wheel"]  # Build tools needed
build-backend = "setuptools.build_meta"

[project]
name = "ailibrary"
version = "0.1.0"
description = ""
readme = "README.md"
# license = {text = "MIT"}
authors = [
    # {name = "", email = "your.email@example.com"}
]
dependencies = [
    "requests==2.32.3"         # Add your required libraries here
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["src"]  # Tell setuptools to look for packages in the 'src' folder
