[build-system]
requires = ["setuptools>=61.0", "wheel"]  # Build tools needed
build-backend = "setuptools.build_meta"

[project]
name = "ailibrary"
version = "0.1.2"
description = "AI Library REST API for any Python 3.9+ application."
requires-python = ">=3.9"
readme = "README.md"
authors = [
    {name = "Arani Chaudhuri", email = "arani@ailibrary.ai"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
# license = {text = ""} #?
dynamic = ["dependencies"]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-cov",
    "pytest-mock",
    "pytest-order",
    # "pytest-asyncio",  # if you need async testing
    "python-dotenv>=1.0.1"
]
dev = [
    "black",
    "flake8",
    "mypy"
]


[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
markers = [
    "http_client: tests for _HTTPClient class",
    "unit: unit tests using mock",
    "integration: integration tests using mock",
    "e2e: end-to-end tests with real API calls"
]

addopts = "-v"
# options from deleted pytest.ini file:
# addopts = 
#     --verbose
#     --tb=short
#     --strict-markers

# list of options found at: https://docs.pytest.org/en/stable/reference/reference.html#command-line-flags
# under the "[pytest] ini-options" section

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]  # Tell setuptools to look for packages in the 'src' folder
